--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body{
     justify-content: space-between;
 }
 .name{
-    color: white;
+    color: rgb(244, 225, 225);
     font-weight: 400;
 }
 .sign-in{
@@ -45,7 +45,7 @@ body{
     margin: 0 auto 0;
     text-align: center;
     font-size: 30px;
-    color: antiquewhite;
+    color: rgb(219, 211, 201);
     font-weight: 100;
     font-family:Arial, sans-serif;
     width: 50%;
